# django-edne-cep

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: coverage-report.yml  lint-and-test.yml  publish.yml
example/: README.md  pyproject.toml  settings.py  urls.py  views.py
example/htmx/: forms.py  urls.py  views.py
example/htmx/templates/htmx/: _field.html  _icons.html  pedido.html
example/templates/: base.html
src/django_edne_cep/: __init__.py  admin.py  apps.py  checks.py  forms.py  models.py  services.py  settings.py  table_names.py  validators.py
src/django_edne_cep/cep_tables/: admin.py  apps.py  models.py
src/django_edne_cep/management/commands/: load_dne.py  load_edne_cep.py
tests/: conftest.py  settings.py  test_admin.py  test_app.py  test_cep_tables.py  test_checks.py  test_forms.py  test_init.py  test_management.py  test_models.py  test_services.py  test_settings.py  test_table_names.py  test_validators.py
tests/admin/: conftest.py  test_cep.py  test_cep_tables.py
